--- a/estilos.css
+++ b/estilos.css
@@ -55,7 +55,7 @@ a{
 }
 
 .box {
-    margin-left: 5%;
+    margin: auto;
     margin-bottom: 20px;
    
     
@@ -67,7 +67,7 @@ a{
 }
 
 .card{
-    margin-left: 15px;
+    margin: autopx;
     text-align: center;
     border-radius: 20px;
     background: rgba(250, 241, 228, 0.5);;
