--- a/estilos.css
+++ b/estilos.css
@@ -9,7 +9,7 @@ a{
     font-weight:700;
 }
 body{
-    display: flex;
+    display: absole;
     justify-content: center;
     background-color: #f8d36e;
     overflow-x: hidden;
